Lookup members from android app

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Kmp Github</string>
+    <string name="update_problem_message">Failed to get data from server. Check connection</string>
+    <string name="unknown_error">Unknown error</string>
 </resources>
