--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Kmp Github</string>
     <string name="update_problem_message">Failed to get data from server. Check connection</string>
     <string name="unknown_error">Unknown error</string>
+    <string name="member_avatar">Member avatar</string>
 </resources>
